--- a/src/views/partials/nav.hbs
+++ b/src/views/partials/nav.hbs
@@ -12,7 +12,7 @@
     </div>
 
     <a class="e a" href="/logout">
-      <img src="https://cdn.discordapp.com/avatars/825841449388081153/036f38f90fc90af0059dc5dd5dfe0796.png">
+      <img src="{{session.user.profilePic}}">
     </a>
   {{else}}
   <p id="counter">...</p>
