--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -1,7 +1,15 @@
 <div class="container">
   <h1>Login</h1>
   <form method="POST" action="/login">
-    <div class="form-group">
+    <div class="input-group">
+      <input
+        type="text"
+        id="username"
+        name="username"
+        placeholder="Enter your Username"
+        value="Marc"
+        autofocus
+      />
     </div>
     <div class="input-group">
       <input
@@ -31,7 +39,7 @@
   width: 100vw; height: 100vh; } .container { width: 400px; color: #000; margin:
   0 auto; padding: 40px; background: hsl(218deg 50% 91%); border-radius: 4px;
   text-align: center; } h1 { margin-bottom: 20px; } .form-group { margin-bottom:
-  20px; text-align: left; } input[type="password"]{ width: 382px !important;
+  20px; text-align: left; } input[type="password"], input[type="text"]{ width: 382px !important;
   padding: 8px; border: 1px solid #ccc; border-radius: 4px; }
   button[type="submit"] { height: 50px; width: 100%; padding: 8px;
   background-color: #000; color: #fff; border: none; border-radius: 4px; cursor:
