--- a/src/views/partials/nav.hbs
+++ b/src/views/partials/nav.hbs
@@ -4,7 +4,8 @@
       <a href="/" id="Home">🏠</a>
     </div>
     <div class="e">
-      <a href="/projectstatus" id="ProjectStatus">Project Status</a>
+      <!--<a href="/projectstatus" id="ProjectStatus">Project Status</a> -->
+      <a href="/codes" id="Codes">Codes</a>
       <a href="/settings" id="Settings">Settings</a>
       <a href="/ddos" id="DDoS">DDoS</a>
   {{/if}}
