--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -5,11 +5,11 @@
   <div class="left">
     <h1 id="month">Attack</h1>
     {{#if attackMonth}}
-      {{#each attackMonth}}
-        <a class="server card" href="/attacks/attack/{{_id}}">
-          <h2>{{url}}</h2>
-        </a>
-      {{/each}}
+        {{#each attackMonth}}
+            <a class="server card" href="/attacks/attack/{{_id}}">
+            <h2>{{url}}</h2>
+            </a>
+        {{/each}}
     {{else}}
       <a class="server card">
         <h2>no attacks on this month.</h2>
@@ -18,6 +18,12 @@
   </div>
   <div class="rigth">
     <h1>today</h1>
+    {{#each attackNow}}
+        <a class="server card" href="/attacks/attack-live/{{_id}}">
+            <h2>{{url}}</h2>
+            <p>🔴 Attacking Now!</p>
+        </a>
+    {{/each}}
     {{#if attackDay}}
       {{#each attackDay}}
         <a class="server card" href="/attacks/attack/{{_id}}">
